--- a/projeto-gestao-frontend-minimal/help.html
+++ b/projeto-gestao-frontend-minimal/help.html
@@ -43,19 +43,70 @@
       </header>
       <main class="main">
         
-<section class="panel">
-  <h2>Central de Ajuda</h2>
-  <p>Bem-vindo à Central de Ajuda do Sistema de Gestão de Projetos! Aqui você encontra respostas para as dúvidas mais comuns e dicas para aproveitar ao máximo a plataforma.</p>
-  <h3>Perguntas Frequentes</h3>
-  <ul>
-    <li><strong>Como criar um novo projeto?</strong> <br> Acesse a aba "Projetos" e clique em "Novo Projeto". Preencha os campos obrigatórios e salve.</li>
-    <li><strong>Como atribuir tarefas?</strong> <br> No menu "Atribuição de Tarefas", selecione a tarefa e o responsável, depois clique em "Atribuir".</li>
-    <li><strong>Como visualizar o Kanban?</strong> <br> Clique na aba "Kanban" para acompanhar o andamento das tarefas em cada etapa.</li>
-    <li><strong>Como editar meu perfil?</strong> <br> Acesse "Perfil" no menu lateral e clique em "Editar Perfil".</li>
-  </ul>
-  <h3>Suporte</h3>
-  <p>Se você não encontrou sua resposta, entre em contato com o suporte pelo e-mail <a href="mailto:suporte@gestaoprojetos.com">suporte@gestaoprojetos.com</a> ou utilize o chat interno.</p>
-</section>
+	<header class="help-header">
+		<h1 class="help-title">Central de Ajuda</h1>
+		<p class="help-subtitle">Encontre respostas, tutoriais e suporte para usar o sistema de gestão</p>
+	</header>
+
+	<div class="help-panel">
+		<input type="text" class="search-help" placeholder="🔍 Busque por dúvidas, tutoriais ou funcionalidades...">
+
+		<div class="help-intro">
+			Bem-vindo à Central de Ajuda do Sistema de Gestão de Projetos! Aqui você encontra respostas para as dúvidas mais comuns e dicas para aproveitar ao máximo a plataforma.
+		</div>
+
+		<div class="help-grid">
+			<div class="help-card">
+				<span class="help-icon">📚</span>
+				<h3 class="help-card-title">Guia Inicial</h3>
+				<p class="help-card-text">Aprenda o básico para começar a usar o sistema</p>
+			</div>
+			<div class="help-card">
+				<span class="help-icon">🎯</span>
+				<h3 class="help-card-title">Gerenciar Projetos</h3>
+				<p class="help-card-text">Como criar e organizar seus projetos</p>
+			</div>
+			<div class="help-card">
+				<span class="help-icon">👥</span>
+				<h3 class="help-card-title">Trabalho em Equipe</h3>
+				<p class="help-card-text">Colabore eficientemente com sua equipe</p>
+			</div>
+		</div>
+
+		<h3>Perguntas Frequentes</h3>
+		
+		<ul class="faq-list">
+			<li class="faq-item">
+				<div class="faq-question">Como criar um novo projeto?</div>
+				<p class="faq-answer">Acesse a aba "Projetos" e clique em "Novo Projeto". Preencha os campos obrigatórios como nome, descrição e prazo, depois clique em "Salvar".</p>
+			</li>
+			<li class="faq-item">
+				<div class="faq-question">Como atribuir tarefas aos membros da equipe?</div>
+				<p class="faq-answer">No menu "Atribuição de Tarefas", selecione a tarefa desejada, escolha o responsável na lista de membros e clique em "Atribuir". Você também pode definir prazos e prioridades.</p>
+			</li>
+			<li class="faq-item">
+				<div class="faq-question">Como visualizar o progresso no Kanban?</div>
+				<p class="faq-answer">Clique na aba "Kanban" para acompanhar o andamento das tarefas em cada etapa: A Fazer, Em Progresso e Concluído. Você pode arrastar as tarefas entre as colunas.</p>
+			</li>
+			<li class="faq-item">
+				<div class="faq-question">Como editar meu perfil e configurações?</div>
+				<p class="faq-answer">Acesse "Perfil" no menu lateral e clique em "Editar Perfil". Lá você pode atualizar seus dados pessoais, foto e preferências do sistema.</p>
+			</li>
+			<li class="faq-item">
+				<div class="faq-question">Como gerar relatórios de produtividade?</div>
+				<p class="faq-answer">Na seção "Relatórios", você pode visualizar métricas de performance, exportar dados em CSV e acompanhar indicadores de cada projeto.</p>
+			</li>
+		</ul>
+	</div>
+
+	<div class="help-section">
+		<h3>Precisa de Mais Ajuda?</h3>
+		<div class="contact-info">
+			<p>Se você não encontrou sua resposta, nossa equipe de suporte está pronta para ajudar!</p>
+			<p>Entre em contato pelo e-mail <a href="mailto:suporte@gestaoprojetos.com" class="support-email">suporte@gestaoprojetos.com</a></p>
+			<p>Ou utilize o chat interno para suporte em tempo real.</p>
+		</div>
+	</div>
 
       </main>
 
